--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       type="image/x-icon"
       href="/react-screen-editor-simple/editor_logo.png"
     />
-    <link rel="stylesheet" href="/umi.css" />
+    <link rel="stylesheet" href="/react-screen-editor-simple/umi.css" />
     <script>
-      window.routerBase = "/";
+      window.routerBase = "/react-screen-editor-simple/";
     </script>
     <script>
       //! umi version: 3.5.35
@@ -36,6 +36,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="/umi.js"></script>
+    <script src="/react-screen-editor-simple/umi.js"></script>
   </body>
 </html>
